# mvs-http-server

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  LICENSE  README.md  biome.json  decompress.ts  decompressClient.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tester.js  tsconfig.json
.github/workflows/: docker-deploy.yml  on_push.yml
apps/mvsi-server/: AGENTS.md  README.md  package.json  tsconfig.json
apps/web/: .cta.json  biome.json  package.json  tsconfig.json  vite.config.ts
catalog/: queries.json  requests.json  responses.json  websocket-cmds.json
patches/: @doctormckay%2Fsteam-crypto@1.2.0.patch
src/: dataAssetSync.ts  db.ts  index.ts  loadAssets.ts  loader.ts  matchmaking-worker.ts  router.ts  server.ts  test.ts  websocket.ts  websocketStart.ts  workerStart.ts
src/config/: jwtConfiguration.ts  logger.ts  redis.ts  serverConfiguration.ts
src/data/: characters.ts  config.ts  gemsBuffs.ts  inventoryDefs.ts  labMaps.ts  maps.ts  milestones.ts  missionContainers.ts  missionList.ts  missionObjectives.ts  missions.ts  perks.ts  perksSet.ts  rifts.ts  skins.ts  taunts.ts  xpMultiplier.ts
src/database/: Account.ts  Config.ts  Configuration.ts  Cosmetics.ts  DataAssets.ts  Inventory.ts  Matches.ts  Network.ts  PerkPages.ts  Player.ts  PlayerTester.ts  Profile.ts  ServerData.ts  client.ts  playerSampleData.ts
src/enums/: battle_pass_score_type_class.ts  battlepass.ts  characters.ts  user_segment.ts
src/env/: env.ts
src/game/: compression.ts  opcodes.ts  serializer.ts  udp.ts  udpClient.ts  udpClientMessages.ts  udpServerMessage.ts
src/game/udp/: CMakeLists.txt  Dockerfile  vcpkg.json
src/game/udp/include/: message_types.h  rollback_server.h  threadSafeMap.h
src/game/udp/include/curl/: curl.h
src/game/udp/lib/: zlib.lib
src/game/udp/src/: bmain.cpp  rollback_server.cpp  serialization.cpp
src/handlers/: access.ts  access2.ts  accounts.ts  batch.ts  commerce.ts  cosmetics.ts  datarouter.ts  drives.ts  file_storage.ts  friends.ts  global_configuration_types.ts  hiss_amalgation_get.ts  index.ts  matches.ts  objects.ts  profiles.ts  sessions.ts  social.ts  ssc.ts
src/interfaces/: queries_types.ts  requests_types.ts  responses_types.ts  websocket-cmds_types.ts
src/middleware/: auth.ts  batchMiddleware.ts  hydraParser.ts
src/services/: cosmeticsService.ts  lobbyService.ts  matchmakingService.ts  profileService.ts
src/ssc/: routes.ts  ssc.ts
src/types/: match.ts
src/utils/: characterKeysValidator.ts  createJwtToken.ts  date.ts  dotify.ts  mapToRecord.ts  objectId.ts  toJSONVirtualId.ts
src/websocket_handlers/: websocket_handler.ts
tests/: Page_00000.txt  Page_00001.txt  assets.js  packet.ts  parsePackets.ts  ticket.ts
(+157 files in other folders)
